se creo la rama navbar_footer y se creo el menu en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,55 @@
 </head>
 <body>
     <header>
-        
+        <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container">
+          <a class="navbar-brand btn" href="/index.html">
+            filmax
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#barranavegacion"
+            aria-controls="barranavegacion"
+            aria-expanded="true"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse" id="barranavegacion">
+            <ul
+              class="fuente navbar-nav me-auto mb-2 my-2 my-lg-0 navbar-nav-scroll navbar-navegacion"
+            >
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fuente" href=""
+                  >Contacto</a
+                >
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="">Acerca de</a>
+              </li>
+            </ul>
+            <button type="button" class="btn btn-dark m-lg-2">
+              <a class="nav-link"  href=""
+                >Login</a
+              >
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary m-lg-2"
+              data-bs-toggle="modal"
+              data-bs-target="#modalRegistro"
+            >
+              Registrate
+            </button>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
         
