se agrego estilo al index.html agregandole la clase backgroundIndex al body y navbar-dark a la etiqueta nav para obtener letras color blanco. Ademàs con el selector universal se le puso magin y padding 0 al documento

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <meta name="keywords" content="js, javascript, proyect, movies, series, website">
     <meta name="author" content="Yuliana Mallorga, Mariano Colombotto, Luciano Danert, Paul Teves">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Módulo 2 - Grupo 2</title>
 </head>
-<body>
+<body class="backgroundIndex">
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container">
           <a class="navbar-brand btn" href="/index.html">
             filmax
@@ -62,8 +63,13 @@
         </div>
       </nav>
     </header>
-    <main>
-        
+    <main class="container text-light">
+        <P>Lorem ipsum dolor sit amet consectetur s magni dicta cumque accusantium dolorum eos aliquam, quia voluptate ratione provident! Tempore, corporis optio dolor excepturi harum consectetur perferendis itaque veritatis quisquam?
+        A natus aliquid quae eveniet maiores ratione sit dolorum. Eaque quo vero aspernatur corrupti velit. Repellendus neque voluptatem quasi soluta autem natus nemo, ducimus veritatis at perferendis vero officia iure!
+        Adipisci natus cumque debitis consequuntur consequatur commodi facere. Magnam odio enim ipsum aperiam rerum eum, reprehenderit incidunt accusantium doloremque soluta a atque id cum alias perspiciatis optio sequi eveniet error?
+        Doloribus unde tenetur, ex animi fugit quae explicabo, tempora tempore dolore distinctio omnis ipsam totam iure, eveniet ullam amet cupiditate. Sit dolor a, maiores doloribus saepe rem consectetur totam est.
+        Numquam culpa eligendi, accusantium consequatur tenetur, eos corporis voluptatum modi architecto, dolore sit ducimus sunt nulla quae ipsa dolorum placeat veniam magni libero rem fugiat tempora esse. Rem, eius tenetur.
+        Molestias delectus magni soluta esse ex dolorum error temporibus rerum totam corporis quis similique eos nesciunt dignissimos, accusantium quo tempore alias minima aliquid? Quaerat sequi molestias temporibus officia ducimus veritatis!</P>
     </main>
     <footer>
         
