se le cambio el tìtulo a la pagina

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Yuliana Mallorga, Mariano Colombotto, Luciano Danert, Paul Teves">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Módulo 2 - Grupo 2</title>
+    <title>Filmax</title>
 </head>
 <body class="backgroundIndex">
     <header>
