se modifico en el archivo css el nombre de la letra Rubik Spray Paint que se habia puesto en español y se cambio el lang de la pàgina en el index de ingles a español

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container">
-          <a class="navbar-brand btn" href="/index.html">
+          <a class="navbar-brand logo" href="/index.html">
             filmax
           </a>
           <button
@@ -31,7 +31,7 @@
           </button>
           <div class="navbar-collapse collapse" id="barranavegacion">
             <ul
-              class="fuente navbar-nav me-auto mb-2 my-2 my-lg-0 navbar-nav-scroll navbar-navegacion"
+              class="fuente navbar-nav ms-auto navbar-nav-scroll navbar-navegacion"
             >
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
@@ -64,6 +64,7 @@
       </nav>
     </header>
     <main class="container text-light">
+        <h1 class="test">filmax</h1>
         <P>Lorem ipsum dolor sit amet consectetur s magni dicta cumque accusantium dolorum eos aliquam, quia voluptate ratione provident! Tempore, corporis optio dolor excepturi harum consectetur perferendis itaque veritatis quisquam?
         A natus aliquid quae eveniet maiores ratione sit dolorum. Eaque quo vero aspernatur corrupti velit. Repellendus neque voluptatem quasi soluta autem natus nemo, ducimus veritatis at perferendis vero officia iure!
         Adipisci natus cumque debitis consequuntur consequatur commodi facere. Magnam odio enim ipsum aperiam rerum eum, reprehenderit incidunt accusantium doloremque soluta a atque id cum alias perspiciatis optio sequi eveniet error?
