se creo la clase meniItems para la etiqueta ul del navbar, se  agrego la letra Signika en el archivo css y se le dio ese estilo a las letras del menu, a excepción del logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </button>
           <div class="navbar-collapse collapse" id="barranavegacion">
             <ul
-              class="fuente navbar-nav ms-auto navbar-nav-scroll navbar-navegacion"
+              class="menuItems navbar-nav ms-auto navbar-nav-scroll navbar-navegacion"
             >
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
