se cambio la clase menuItems de la etiqueta ul al div que la contiene.Ademàs se puso con mayùscula el logo  del sitio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container">
           <a class="navbar-brand logo" href="/index.html">
-            filmax
+            Filmax
           </a>
           <button
             class="navbar-toggler"
@@ -29,20 +29,20 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="navbar-collapse collapse" id="barranavegacion">
+          <div class="navbar-collapse collapse menuItems" id="barranavegacion">
             <ul
-              class="menuItems navbar-nav ms-auto navbar-nav-scroll navbar-navegacion"
+              class="navbar-nav ms-auto navbar-nav-scroll navbar-navegacion"
             >
-              <li class="nav-item">
+              <li class="nav-item btn">
                 <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item btn">
                 <a class="nav-link fuente" href=""
                   >Contacto</a
                 >
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item btn">
                 <a class="nav-link" href="">Acerca de</a>
               </li>
             </ul>
@@ -64,7 +64,7 @@
       </nav>
     </header>
     <main class="container text-light">
-        <h1 class="test">filmax</h1>
+        <h1 class="test">Filmax</h1>
         <P>Lorem ipsum dolor sit amet consectetur s magni dicta cumque accusantium dolorum eos aliquam, quia voluptate ratione provident! Tempore, corporis optio dolor excepturi harum consectetur perferendis itaque veritatis quisquam?
         A natus aliquid quae eveniet maiores ratione sit dolorum. Eaque quo vero aspernatur corrupti velit. Repellendus neque voluptatem quasi soluta autem natus nemo, ducimus veritatis at perferendis vero officia iure!
         Adipisci natus cumque debitis consequuntur consequatur commodi facere. Magnam odio enim ipsum aperiam rerum eum, reprehenderit incidunt accusantium doloremque soluta a atque id cum alias perspiciatis optio sequi eveniet error?
