se modifico la distribuciòn de elementos en el navbar y uso  media query para modificar el fondo del navbar cuando aparezca el boton toggle

--- a/admin.html
+++ b/admin.html
@@ -23,5 +23,6 @@
     </footer>
     <script src="js/bootstrap.min.js"></script>
     <script src="/js/admin.js" type="module"></script>
+    <script src="js/navbar.js"></script>
 </body>
 </html>
