--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
                 <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fuente" href=""
+                <a class="nav-link fuente" href="/pages/contacto.html"
                   >Contacto</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="">Acerca de</a>
+                <a class="nav-link" href="/pages/nosotros.html">Acerca de</a>
               </li>
             </ul>
            
                  <button type="button" class="btn btn-dark m-lg-2">
-                      <a class="nav-link"  href=""
+                      <a class="nav-link"  href="/pages/login.html"
                     >Login</a
                   >
                 </button>
