se modifico la distribucion de las columnas del footer y se modifico la fuente. Ademàs se agrego efectos filter al logo del footer

--- a/index.html
+++ b/index.html
@@ -79,17 +79,16 @@
      <!-- inicio de footer -->
        <footer class="container-fluid bg-new-foorter text-secondary">
       <div class="container pt-2">
-        <div class="box-footer text-sm-center">
+        <div class="box-footer text-sm-center menuItems">
           <div class="row my-2">
-            <div class="col-4 px-1 text-sm-center p-sm-0">
-              <div class="logo nav-item text-light">
-                <a href="/index.html " class="nav-item text-light">
+            <div class="col-lg-4 col-md-3 col-sm-6 px-1 text-sm-center p-sm-0">       
+                <a href="/index.html " class="nav-item logo_footer logo  text-light text-light">
                  Filmax
                 </a>
-              </div>
+              
             </div>
 
-            <div class="col-4 text-sm-center p-sm-0">
+            <div class="col-lg-4 col-md-3 col-sm-6 text-sm-center p-sm-0">
               <ul class="list-unstyled">
                 <li class="nav-item"><h6 class="text-light">Navegación</h6></li>
                 <li class="nav-item">
@@ -121,7 +120,7 @@
               </ul>
             </div>
 
-            <div class="col-4 px-sm-3 pb-2 mt-md-3">
+            <div class="col-lg-4 col-md-6 col-sm-12 px-sm-3 pb-2 mt-md-3">
               <div>
                 <h6
                   class="text-light text-lg-center mb-3 px-md-5 ps-xs-3 px-lg-0"
