se agrego en el footer derechos reservados

--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
                 </div>
               </div>
             </div>
-
+            <div class="col-lg-12 px-1 text-center p-sm-0 lead">    
+                <hr>   
+                <p>© 2022 Todos los derechos reservados. Filmax se usa bajo licencia.</p> 
+            </div>
             
           </div>
         </div>
