--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </nav>
     </header>
-    <main class="container text-light">
+    <main class="container-fluid text-light">
         <div class="container-fluid imagen-avatar">
 
         </div>
