se agrego boton pagina registro y su page

--- a/index.html
+++ b/index.html
@@ -57,13 +57,8 @@
                     >Login</a
                   >
                 </button>
-                <button
-                  type="button"
-                  class="btn btn-primary m-lg-2"
-                  data-bs-toggle="modal"
-                  data-bs-target="#modalRegistro"
-                >
-                  Registrate
+                <button type="button" class="btn btn-primary m-lg-2">
+                  <a class="nav-link" href="/pages/registro.html">Registrate</a>
                 </button>
            
            
