--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top bg-black bg-opacity-25 navbar-dark bg-new">
         <div class="container">  
-          <a class="navbar-brand logo d-flex" href="/index.html">
+          <a class="navbar-brand logo w-50 d-flex" href="/index.html">
             <div class="logo">
                     Filmax
                 </div> 
@@ -47,7 +47,7 @@
           </button>
           <div class="navbar-collapse collapse menuItems" id="barranavegacion">
             <ul
-              class="navbar-nav navbar-nav-scroll text-center navbar-navegacion"
+              class="navbar-nav navbar-nav-scroll  navbar-navegacion"
             >
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
@@ -58,12 +58,12 @@
                 >
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item w-50">
                 <a class="nav-link" href="/pages/nosotros.html">Acerca de</a>
               </li>
             </ul>
            
-                 <button type="button" class="btn btn-dark m-lg-2">
+                 <button type="button" class="btn btn-dark m-lg-2 m-auto">
                       <a class="nav-link"  href="/pages/login.html"
                     >Login</a
                   >
