se completo el readme

--- a/pages/login.html
+++ b/pages/login.html
@@ -16,6 +16,7 @@
       name="author"
       content="Yuliana Mallorga, Mariano Colombotto, Luciano Danert, Paul Teves"
     />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <title>Filmax</title>
