se agrego el required en form registro

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -101,6 +101,7 @@
                 id="nombreRegistro"
                 placeholder="Juan"
                 maxlength="40"
+                required
               />
           </div>
           <div class="mb-5">
@@ -114,6 +115,7 @@
                 id="apellidoRegistro"
                 placeholder="Pérez"
                 maxlength="40"
+                required
               />
           </div>
           <div class="mb-5">
@@ -127,6 +129,7 @@
                 id="emailRegistro"
                 placeholder="juanperez@correo.com"
                 maxlength="40"
+                required
               />
           </div>
           <div class="mb-5">
@@ -140,6 +143,7 @@
                 id="contraseñaRegistro"
                 placeholder="Mínimo 8 caracteres, una minúscula y una mayúscula"
                 maxlength="18"
+                required
               />
           </div>
           <div class="mb-5">
@@ -153,6 +157,7 @@
                 id="contraseñaRegistro2"
                 placeholder="Ingrese nuevamente su contraseña"
                 maxlength="18"
+                required
               />
               <div id="contraseñaIncorrecta"></div>
           </div>
