se agrego estilo al html del archivo nosotros.html y se cambiaron algunas clases. Ademas se realizo cambios al parrado.

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -78,17 +78,17 @@
       </nav>
     </header>
       <!-- Secciòn del main -->
-    <main class="backgroundIndex">
-      <section class="container-fluid bg-dark bg-gradient py-2 ">
+    <main class="backgroundNosotros">
+      <section class="container-fluid  py-2 ">
           <article class="container text-light">
             <h2 class="display-4 text-center">¡BIENVENIDO!</h2>
           </article>
       </section>
       
       <section class="container-fluid py-5">
-        <div class="container ">
-          <article class="row bg-dark bg-opacity-50 text-light">
-           <h1 class="diplay-2 text-center text-primary my-5">"Conocenos"</h1>
+        <div class="container">
+          <article class="row bg-black bg-gradient text-light">
+           <h1 class="diplay-2 text-center text-primary my-5">"SOBRE NOSOTROS"</h1>
             <div class="col-12 px-5">
               <h3 class="text-center mt-4 text-decoration-underline py-2"> Información de la corporación Filmax</h3>
               <p class="lead letter-first">
@@ -113,7 +113,7 @@ Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax
           </article>
         </div>
       </section>
-       <section class="container-fluid bg-dark">
+       <section class="container-fluid bg-black">
         <div class="container">
              <div class="row text-center py-5">
                  <h1 class="diplay-1 text-center text-light my-5 fst-italic">Conoce a algunos miembros de nuestro equipo</h1>
