--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -88,32 +88,32 @@
       <section class="container-fluid py-5">
         <div class="container">
           <article class="row bg-black bg-gradient text-light">
-           <h1 class="diplay-2 text-center text-primary my-5">"SOBRE NOSOTROS"</h1>
-            <div class="col-12 px-5">
+           <h1 class="diplay-2 text-center my-5">"Sobre Filmax"</h1>
+            <div class="col-12 px-5 img-wrapper-equipo">
               <h3 class="text-center mt-4 text-decoration-underline py-2"> Información de la corporación Filmax</h3>
               <p class="lead letter-first">
-Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax que te proporciona el acceso al servicio de Filmax depende del país de tu suscripción, y está indicada en el correo de confirmación de tu suscripción o de tu pago. En tu declaración de privacidad local se indican las entidades de Netflix que reúnen las condiciones para ocuparse del tratamiento de tus datos.
+Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax que te proporciona el acceso al servicio de Filmax depende del país de tu suscripción, y está indicada en el correo de confirmación de tu suscripción o de tu pago. En tu declaración de privacidad local se indican las entidades de Filmax que reúnen las condiciones para ocuparse del tratamiento de tus datos.
               </p>
-              <figure>
+              <figure class="w-75 m-auto  rounded-3 contenedor-img">
                 <img
-                  src=""
-                  class="img-fluid"
+                  src="/img/nosotros/equipo_rolling.jpg"
+                  class="img-fluid imagen-filter"
                   alt="foto del equipo de trabajo"
                 />
               </figure>
             </div>
             <div class="col-12 px-5">
-              <h3 class="text-center my-3 text-decoration-underline">Filmax</h3>
+              <h3 class="text-center my-3 text-decoration-underline">Nuestro sitio</h3>
               <p class="lead letter-first">
                 El sitio en general esta diseñado para que se encuentre el contenido facilmente y que su experiencia de usuario sea lo mas placentera posible.
               </p>
             </div>
-             <h4 class="diplay-4 text-center text-dark opacity-50 my-5">¡Disfruta del sitio web!</h4>
+             <h4 class="diplay-4 text-center my-5">¡Disfruta del sitio web!</h4>
 
           </article>
         </div>
       </section>
-       <section class="container-fluid bg-black">
+       <section class="container-fluid bg-new">
         <div class="container">
              <div class="row text-center py-5">
                  <h1 class="diplay-1 text-center text-light my-5 fst-italic">Conoce a algunos miembros de nuestro equipo</h1>
@@ -121,22 +121,22 @@ Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax
                     <div class="card bg-gradient bg-light bg-opacity-10 border border-0 mb-3 card-wrapper">
                      <div class="text-bg-light pt-3">
                          <figure class="w-75 mx-auto  rounded contenedor-img">
-                          <img src="" class="img-fluid imagen-filter" alt="Mariano Colombotto">
+                          <img src="/img/nosotros/mariano_colombotto.jpg" class="img-fluid imagen-filter" alt="Mariano Colombotto">
                       </figure>
                      </div> 
                      <div class="card-body text-light pb-3 fuente">
                        <h4 class="card-title display-5">Mariano</h4>
-                       <h5 class="mt-2">"Lider de equipo y desarrollo"</h5>
-                       <a type="button" class="btn btn-orange"  data-bs-toggle="modal" data-bs-target="#modalMiembrodeEquipoUno">Ver más</a>
+                       <h5 class="mt-2">"Lider de equipo"</h5>
+                       <a type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#modalMiembrodeEquipoUno">Ver más</a>
                      </div>
                    </div>
                  </div>  
                  <div class="col-lg-3 col-sm-6">
                     <div class="card bg-gradient bg-light bg-opacity-10 border border-0 mb-3 card-wrapper">
                      <div class="text-bg-light pt-3">
-                         <figure class="w-75 mx-auto  rounded-circle contenedor-img">
-                          <img src="" class="img-fluid imagen-filter" alt="Yuliana Mallorga">
-                      </figure>
+                         <figure class="width-img-yuli mx-auto  rounded contenedor-img">
+                             <img src="/img/nosotros/yuliana.jpg" class="img-fluid imagen-filter" alt="Yuliana Mallorga">
+                        </figure>
                      </div> 
                      <div class="card-body text-light pb-3 fuente">
                        <h4 class="card-title display-5">Yuliana</h4>
