se modificaron algunas clases del modal y se agrego la foto que correspondia al primer modal

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -181,15 +181,15 @@ Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax
     <!-- Modal Mariano-->
     <div class="modal fade bg-gradient bg-primary bg-opacity-10" id="modalMiembrodeEquipoUno" tabindex="-1" aria-labelledby="modalMiembrodeEquipoUnoLabel" aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content text-light bg-gradient bg-dark">
+        <div class="modal-content text-light bg-gradient bg-primary bg-opacity-50">
           <div class="modal-header">
-            <h3 class="modal-title mx-auto text-center display-4" id="modalMiembrodeEquipoUnoLabel">Mariano Colombotto</h3>  
+            <h3 class="modal-title mx-auto text-center display-5" id="modalMiembrodeEquipoUnoLabel">Mariano Colombotto</h3>  
           </div>
           <div class="modal-body">
-             <figure class="w-75 mx-auto">
-                    <img src="/img/acerca-de-nosotros/yuli.svg" class="img-fluid rounded" alt="imagen de yuliana">
+             <figure class="w-50 mx-auto">
+                    <img src="/img/nosotros/mariano_colombotto.jpg" class="img-fluid rounded" alt="imagen de mariano colombotto">
              </figure>
-            <p class="card-text font-monospace p-2 space-letter">Mi trabajo es coordinar al equipo, controlar que se cumplan los plazos establecidos y organizar periodicamente dayli meetings para generar acuerdos con respecto al trabajo a desarrollar.</p>
+            <p class="card-text font-monospace p-2 space-letter">Mi trabajo es coordinar al equipo y controlar que se cumplan los plazos establecidos respecto al trabajo a desarrollar.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
