se agrego media query a la pagina 404

--- a/pages/404.html
+++ b/pages/404.html
@@ -82,7 +82,7 @@
              <h1 class="letter-size">No se puede acceder a este sitio.</h1>
         </div>
         <div >
-            <img src="/img/oops-404-error-.webp" class="img-fluid picture-error" alt="imagen de error">
+            <img src="/img/oops-404-error-.webp" class="img-fluid picture-error img-size" alt="imagen de error">
             
         </div>  
     </main>
