se agrego la clase container-lg  al main y se cambio la posicion top del texto

--- a/pages/404.html
+++ b/pages/404.html
@@ -77,7 +77,7 @@
         </div>
       </nav>
     </header>
-    <main  id="paginaError">
+    <main class="container-lg" id="paginaError">
         <div class="text-primary text-position position-absolute">
              <h1 class="letter-size">No se puede acceder a este sitio.</h1>
         </div>
