--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="proyecto modulo 2 grupo 2 - comis. 23i - pagina web pelis-series">
-    <meta name="keywords" content="js, javascript, proyect, movies, series, website">
+    <meta name="keywords" content="js,vanilla, javascript, proyect, movies, series, website">
     <meta name="author" content="Yuliana Mallorga, Mariano Colombotto, Luciano Danert, Paul Teves">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -88,10 +88,10 @@
         </div>
     </main>
      <!-- inicio de footer -->
-       <footer class="container-fluid bg-new-foorter text-secondary">
+     <footer class="container-fluid bg-new-foorter text-secondary">
       <div class="container pt-2">
         <div class="box-footer text-sm-center menuItems">
-          <div class="row my-2">
+          <div class="row mt-2">
             <div class="col-lg-4 col-md-3 col-sm-6 px-1 text-sm-center p-sm-0">       
                 <a href="/index.html " class="nav-item logo_footer logo  text-light text-light">
                  Filmax
