se elimino la clase backgroundIndex

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     ></script>
 </head>
-<body class="backgroundIndex">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top bg-black bg-opacity-25 navbar-dark bg-new">
         <div class="container">  
