--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -79,15 +79,12 @@
     </header>
       <!-- Secciòn del main -->
     <main class="backgroundNosotros">
-      <section class="container-fluid  py-2 ">
-          <article class="container text-light">
-            <h2 class="display-4 text-center">¡BIENVENIDO!</h2>
+      <section class="container-fluid text-black py-5 bg-article">
+        <div class="container ">
+         <article class="container ">
+            <h2 class="size-title-nosotros text-center space-letter">¡BIENVENIDO!</h2>
           </article>
-      </section>
-      
-      <section class="container-fluid py-5">
-        <div class="container">
-          <article class="row bg-black bg-gradient text-light">
+          <article class="row bg-light bg-opacity-50">
            <h1 class="diplay-2 text-center my-5">"Sobre Filmax"</h1>
             <div class="col-12 px-5 img-wrapper-equipo">
               <h3 class="text-center mt-4 text-decoration-underline py-2"> Información de la corporación Filmax</h3>
@@ -101,15 +98,12 @@ Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax
                   alt="foto del equipo de trabajo"
                 />
               </figure>
-            </div>
-            <div class="col-12 px-5">
               <h3 class="text-center my-3 text-decoration-underline">Nuestro sitio</h3>
               <p class="lead letter-first">
                 El sitio en general esta diseñado para que se encuentre el contenido facilmente y que su experiencia de usuario sea lo mas placentera posible.
               </p>
+             <h4 class="diplay-4 text-center my-5">¡Disfruta de la mejor experiencia en peliculas y series!</h4>
             </div>
-             <h4 class="diplay-4 text-center my-5">¡Disfruta del sitio web!</h4>
-
           </article>
         </div>
       </section>
