se le cambio el color al navbar

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top bg-black bg-opacity-25 navbar-dark bg-new">
+        <nav class="navbar navbar-expand-lg fixed-top bg-black bg-opacity-25 navbar-dark" id="navbar-bg-nosotros">
         <div class="container">  
           <a class="navbar-brand logo w-50 d-flex" href="/index.html">
             <div class="logo">
@@ -91,10 +91,10 @@
               <p class="lead letter-first">
 Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax que te proporciona el acceso al servicio de Filmax depende del país de tu suscripción, y está indicada en el correo de confirmación de tu suscripción o de tu pago. En tu declaración de privacidad local se indican las entidades de Filmax que reúnen las condiciones para ocuparse del tratamiento de tus datos.
               </p>
-              <figure class="w-75 m-auto  rounded-3 contenedor-img">
+              <figure class="w-75 m-auto contenedor-img-equipo">
                 <img
                   src="/img/nosotros/equipo_rolling.jpg"
-                  class="img-fluid imagen-filter"
+                  class="img-fluid imagen-filter rounded-3"
                   alt="foto del equipo de trabajo"
                 />
               </figure>
@@ -195,7 +195,7 @@ Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax
        <footer class="container-fluid bg-new-foorter text-secondary">
       <div class="container pt-2">
         <div class="box-footer text-sm-center menuItems">
-          <div class="row my-2">
+          <div class="row mt-2">
             <div class="col-lg-4 col-md-3 col-sm-6 px-1 text-sm-center p-sm-0">       
                 <a href="/index.html " class="nav-item logo_footer logo  text-light text-light">
                  Filmax
