se agregaron 2 imagenes en la carpeta img, dentro de la carpeta nosotros y se agrego la ruta de estas imagenes a las card que les correspondian

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -71,8 +71,6 @@
                 <button type="button" class="btn btn-primary m-lg-2">
                   <a class="nav-link" href="/pages/registro.html">Registrate</a>
                 </button>
-           
-           
           </div>
         </div>
       </nav>
@@ -143,7 +141,7 @@ Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax
                     <div class="card bg-gradient bg-light bg-opacity-10 border border-0 mb-3 card-wrapper">
                      <div class="text-bg-light pt-3">
                          <figure class="w-75 mx-auto  rounded contenedor-img">
-                          <img src="" class="img-fluid imagen-filter" alt="Luciano Dannert">
+                          <img src="/img/nosotros/Luciano.jpg" class="img-fluid imagen-filter" alt="Luciano Dannert">
                       </figure>
                      </div> 
                      <div class="card-body text-light pb-3 fuente">
@@ -156,8 +154,8 @@ Filmax ofrece su servicio a suscriptores de verios países. La entidad de Filmax
                  <div class="col-lg-3 col-sm-6">
                     <div class="card bg-gradient bg-light bg-opacity-10 border border-0 mb-3 card-wrapper">
                      <div class="text-bg-light pt-3">
-                         <figure class="w-75 mx-auto  rounded-circle contenedor-img">
-                          <img src="" class="img-fluid imagen-filter" alt="Paul Teves">
+                         <figure class=" mx-auto  width-img-paul rounded contenedor-img">
+                          <img src="/img/nosotros/paul.jpeg" class="img-fluid imagen-filter" alt="Paul Teves">
                       </figure>
                      </div> 
                      <div class="card-body text-light pb-3 fuente">
