se quitaron los required

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -126,8 +126,9 @@
                            type="text"
                            id="nombre"
                            class="form-control"
-                           required="requered"
+                          
                            placeholder="Perez Ariel"
+                           maxlength="15"
                          />
                        </div>
                        <div class="mb-3">
@@ -135,11 +136,11 @@
                            >Ingresa tu email<span class="text-danger">*</span></label
                          >
                          <input
-                           type="text" 
+                           type="email" 
                            id="email"
                            class="form-control"
                            placeholder="Perez_Ariel@example.com"
-                           required="requered"
+                           
                          />
                        </div>
                        <div class="mb-3">
@@ -170,7 +171,7 @@
        <footer class="container-fluid bg-new-foorter text-secondary">
       <div class="container pt-2">
         <div class="box-footer text-sm-center menuItems">
-          <div class="row my-2">
+          <div class="row mt-2">
             <div class="col-lg-4 col-md-3 col-sm-6 px-1 text-sm-center p-sm-0">       
                 <a href="/index.html " class="nav-item logo_footer logo  text-light text-light">
                  Filmax
