se agrego un alert que avisa que se envia el mensaje si todas las validaciones son correctas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -263,6 +263,7 @@
         </div>
       </div>
     </footer>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/contacto.js"></script>
 </body>
